src/eventsub/automod/message/snapshots/twitch_api__eventsub__automod__message__hold__parse_payload_v1.snap
---
source: src/eventsub/automod/message/hold.rs
expression: parsed
---
AutomodMessageHoldV1(
    Payload {
        subscription: EventSubscriptionInformation {
            id: "e523fda0-01b6-4b0e-9024-a5a80c5ad680",
            status: Enabled,
            cost: 0,
            condition: AutomodMessageHoldV1 {
                broadcaster_user_id: "129546453",
                moderator_user_id: "129546453",
            },
            created_at: "2024-10-19T20:11:13.917500523Z",
            transport: Websocket(
                WebsocketTransportResponse {
                    session_id: "AgoQRniKAQ1ITYSESh4ku8anEBIGY2VsbC1j",
                    connected_at: None,
                    disconnected_at: None,
                },
            ),
            type_: AutomodMessageHold,
            version: "1",
        },
        message: Notification(
            AutomodMessageHoldV1Payload {
                broadcaster_user_id: "129546453",
                broadcaster_user_login: "nerixyz",
                broadcaster_user_name: "nerixyz",
                user_id: "489584266",
                user_login: "uint128",
                user_name: "uint128",
                message_id: "332e99ac-e19c-4368-a15b-793e8266b51f",
                message: AutomodMessage {
                    text: "boobs",
                    fragments: [
                        Text {
                            text: "boobs",
                        },
                    ],
                },
                category: Sexwords,
                level: 4,
                held_at: "2024-10-19T20:11:16.799750627Z",
            },
        ),
    },
)
