src/eventsub/automod/message/snapshots/twitch_api__eventsub__automod__message__hold__parse_payload_v2_blocked_term.snap
---
source: src/eventsub/automod/message/hold.rs
expression: parsed
---
AutomodMessageHoldV2(
    Payload {
        subscription: EventSubscriptionInformation {
            id: "85c8dcb0-7af4-4581-b684-32087d386384",
            status: Enabled,
            cost: 0,
            condition: AutomodMessageHoldV2 {
                broadcaster_user_id: "129546453",
                moderator_user_id: "129546453",
            },
            created_at: "2024-11-18T16:36:08.691979783Z",
            transport: Websocket(
                WebsocketTransportResponse {
                    session_id: "AgoQREw4FYBWQ5quz4J-S4VYkRIGY2VsbC1j",
                    connected_at: None,
                    disconnected_at: None,
                },
            ),
            type_: AutomodMessageHold,
            version: "2",
        },
        message: Notification(
            AutomodMessageHoldV2Payload {
                broadcaster_user_id: "129546453",
                broadcaster_user_login: "nerixyz",
                broadcaster_user_name: "nerixyz",
                user_id: "489584266",
                user_login: "uint128",
                user_name: "uint128",
                message_id: "dcfc6b48-0fd1-446c-8cf5-d1810bb55b73",
                message: AutomodMessage {
                    text: "boobs Kappa 😂😂 foo private",
                    fragments: [
                        Text {
                            text: "boobs",
                        },
                        Text {
                            text: " ",
                        },
                        Emote {
                            text: "Kappa",
                            emote: AutomodMessageEmote {
                                id: "25",
                                emote_set_id: "0",
                            },
                        },
                        Text {
                            text: " 😂😂 ",
                        },
                        Text {
                            text: "foo",
                        },
                        Text {
                            text: " ",
                        },
                        Text {
                            text: "private",
                        },
                    ],
                },
                reason: BlockedTerm(
                    AutomodBlockedTermInfo {
                        terms_found: [
                            AutomodBlockedTerm {
                                term_id: "e4d4f1ba-99bf-4b19-9875-cd4eda98ead9",
                                boundary: AutomodMessageBoundary {
                                    start_pos: 15,
                                    end_pos: 17,
                                },
                                owner_broadcaster_user_id: "129546453",
                                owner_broadcaster_user_login: "nerixyz",
                                owner_broadcaster_user_name: "nerixyz",
                            },
                            AutomodBlockedTerm {
                                term_id: "e60a94ea-e5d9-444e-a114-4cfd2f86c6ad",
                                boundary: AutomodMessageBoundary {
                                    start_pos: 19,
                                    end_pos: 25,
                                },
                                owner_broadcaster_user_id: "129546453",
                                owner_broadcaster_user_login: "nerixyz",
                                owner_broadcaster_user_name: "nerixyz",
                            },
                        ],
                    },
                ),
                held_at: "2024-11-18T16:58:41.476117057Z",
            },
        ),
    },
)
